# solar

./: .gitignore  CMakeLists.txt  Makefile  Renderer.cpp  Renderer.h  Window.cpp  Window.h  c_cpp_properties.json  main.cpp  solar
glad/include/glad/: glad.h
glad/src/: glad.c
include/animation/: AnimationComponent.h
include/camera/: Camera.h
include/celestial/: AsteroidBelt.h  AtmosphereLayer.h  CloudLayer.h  Moon.h  Orbit.h  OrbitMath.h  Planet.h  SaturnRings.h  SpaceStation.h  Spacecraft.h  Starfield.h  Sun.h  SunHalo.h
include/core/: Mesh.h  Renderer.h  RendererComponent.h  Shader.h  Texture.h  Window.h
include/lighting/: LightingComponent.h
include/scene/: Component.h  Entity.h  SceneManager.h  SceneObject.h  Skybox.h  Transform.h  TransformComponent.h
include/utilities/: TextRenderer.h
scripts/: download_earth_textures.py
shaders/: asteroid.vert  blur.frag  cube.frag  cube.vert  earth.frag  earth.vert  hdr_bloom.frag  skybox.frag  skybox.vert  text.frag
solar.dSYM/Contents/: Info.plist
solar.dSYM/Contents/Resources/DWARF/: solar
solar.dSYM/Contents/Resources/Relocations/aarch64/: solar.yml
src/: main.cpp
src/animation/: AnimationComponent.cpp
src/camera/: Camera.cpp
src/celestial/: AsteroidBelt.cpp  AtmosphereLayer.cpp  CloudLayer.cpp  Moon.cpp  Orbit.cpp  Planet.cpp  SaturnRings.cpp  SpaceStation.cpp  Spacecraft.cpp  Starfield.cpp  Sun.cpp  SunHalo.cpp
src/core/: Mesh.cpp  Renderer.cpp  RendererComponent.cpp  Shader.cpp  Texture.cpp  Window.cpp
src/lighting/: LightingComponent.cpp
src/scene/: Entity.cpp  SceneManager.cpp  Skybox.cpp  Transform.cpp  TransformComponent.cpp
src/utilities/: TextRenderer.cpp
